# obmc-yadro-hardware

./: README.md  meson.build
com/yadro/HWManager/: BackplaneMCU.interface.yaml  Chassis.interface.yaml  Fan.interface.yaml  StorageManager.interface.yaml
com/yadro/Inventory/: Manager.interface.yaml
service_files/: meson.build  yadro-hw-manager.service  yadro-network-adapter-manager.service  yadro-storage-manager.service
src/: common.cpp  common.hpp  common_i2c.cpp  common_i2c.hpp  common_swupd.cpp  common_swupd.hpp  dbus.hpp  pcidb.hpp  swupd_activator.cpp
src/common/: mmapfile.cpp  mmapfile.hpp
src/hw/: hw_mngr.cpp  hw_mngr.hpp  main.cpp  objects.cpp  objects.hpp  options.hpp  pcie_cfg.cpp  pcie_cfg.h  product_registry.hpp
src/mcu/: backplane_mcu_driver.cpp  backplane_mcu_driver.hpp  backplane_mcu_driver_v0.cpp  backplane_mcu_driver_v1.cpp  reflash.cpp  updater.cpp
src/network/: adapter.cpp  adapter.hpp  main.cpp
src/storage/: backplane_control.cpp  backplane_control.hpp  backplane_mcu_driver.hpp  backplane_mcu_driver_v0.cpp  backplane_mcu_driver_v1.cpp  inventory.cpp  inventory.hpp  main.cpp
